great-idea-website/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Your code starts here! */

*{
	box-sizing: border-box;
}
p{
	line-height: 1.2;
}
.container{
	width: 900px;
	margin: 0 auto;
	/* border: 1px solid red; */
}
header{
	position: relative;
	margin: 10px 0 50px 0;
	padding-top: 15px;
}
header nav{
	display: inline-block;
}

header nav a{
	text-decoration: none;
	color: gray;
	margin: 0 50px 0 0;
}

#section1 article{
	display: inline-block;
	width: 448px;
}
#section2{
	margin-bottom: 35px;
	padding-bottom: 35px;
	border-bottom: 1px solid black;
}
#section2 article{
	display: inline-block;
	width:297px;
}
article p{
	padding-right: 15px;
}
address{
	line-height: 1.5;
}
address p{
	margin-bottom: 10px;	
}

.logo{
	display: inline-block;
	position: absolute;
	top: 5px;
	right: 40px;
}

.logo2{
	display: inline-block;
}

h1{
	font-size: 70px;
	text-align: center;
}

h3{
	font-size: 17px;
}

#hero{
	padding:15px 0 0 0;
	margin-bottom: 30px;
	border-bottom: 1px solid black;
	text-align: center;
}

.left{
	display: inline-block;
	padding: 0 50px 0 0;
	height: 400px;
}

.right{
	display: inline-block;
	padding: 0 0 0 50px;
	height: 400px;
}

.button{
	width: 175px;
	height: 35px;
	padding: 8px;
	border: 1px solid black;
	text-align: center;
	margin: 0 auto;
}

.middle-img{
	margin: 30px 0;
}

.copyright{
	width: 200px;
	margin: 25px auto;
}

